# src/internal/router/pond_router.go
@@ -13,6 +13,7 @@ func (r *Router) setupPondRoutes(group fiber.Router) {
 	pond.Post("", r.handlers.PondHandler.AddPonds)
 	pond.Post("/:pondId/fill", r.handlers.PondHandler.FillPond)
 	pond.Post("/:pondId/move", r.handlers.PondHandler.MovePond)
+	pond.Post("/:pondId/sell", r.handlers.PondHandler.SellPond)
 	pond.Get("/:id", r.handlers.PondHandler.GetPond)
 	pond.Put("/:id", r.handlers.PondHandler.UpdatePond)
 	pond.Delete("/:id", r.handlers.PondHandler.DeletePond)
